--- a/Forms/MainWindow.xaml
+++ b/Forms/MainWindow.xaml
@@ -319,6 +319,15 @@
 				</Image>
 			</Button>
 
+			<Grid Width="80" VerticalAlignment="Center">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="18"/>
+					<RowDefinition Height="18"/>
+				</Grid.RowDefinitions>
+				<TextBlock Grid.Row="0" Text="State" HorizontalAlignment="Center"/>
+				<TextBlock Grid.Row="1" Text="{Binding ExecutionControl.ExecutionStateString}" Foreground="AliceBlue" HorizontalAlignment="Center"/>
+			</Grid>
+
 		</StackPanel>
 		
 		<StackPanel Grid.Column="1" Grid.Row="2" Margin="5,0,0,0">
