--- a/Forms/DisassemblyListView.xaml
+++ b/Forms/DisassemblyListView.xaml
@@ -17,12 +17,13 @@
 		<KeyBinding Key="F10" Command="{Binding ExecutionControl.DebugStepOverCommand}" />
 		<KeyBinding Key="F11" Command="{Binding ExecutionControl.DebugStepIntoCommand}" />
 		<KeyBinding Key="F12" Command="{Binding ExecutionControl.DebugStepOutCommand}" />
+		<KeyBinding Key="G" Modifiers="Ctrl" Command="{Binding GotoAddressCommand}"/>
 	</Window.InputBindings>
 	<Grid Background="{DynamicResource Background}" >
 		<Grid.RowDefinitions>
 			<RowDefinition Height="32"/>
 			<RowDefinition/>
-			<RowDefinition Height="24"/>
+			<RowDefinition Height="26"/>
 		</Grid.RowDefinitions>
 
 		<Grid Grid.Row="0" Background="{DynamicResource BackgroundHighlighted}">
@@ -36,29 +37,51 @@
 			<yc:TVCMemorySelector Grid.Column="0" Grid.ColumnSpan="2" x:Name="tmsMemorySelector" />
 		</Grid>
 
-		<yc:DisassemblyListBox Grid.Row="1" x:Name="dlbDisassembly" SelectionChanged="dlbDisassembly_SelectionChanged" />
+		<yc:DisassemblyListBox Grid.Row="1" x:Name="dlbDisassembly" SelectionChanged="dlbDisassembly_SelectionChanged" >
+			<yc:DisassemblyListBox.ContextMenu>
+				<ContextMenu>
+					<MenuItem Header="GoTo Address" />
+					<Separator />
+					<MenuItem Header="Load assembler list..." Command="{Binding LoadAssemblerListCommand}"  />
+				</ContextMenu>
+			</yc:DisassemblyListBox.ContextMenu>
+		</yc:DisassemblyListBox>
 
-		<Grid Grid.Row="2" Background="{DynamicResource BackgroundHighlighted}">
+		<Popup IsOpen="{Binding GoToAddresPopupOpened}" PlacementTarget="{Binding ElementName=gFooter}" Placement="Top">
+			<Border BorderBrush="{DynamicResource BorderBrushSelected}"  BorderThickness="1">
+				<StackPanel Orientation="Horizontal" >
+					<TextBlock Text="Goto Address:" VerticalAlignment="Center" Margin="3"/>
+					<TextBox x:Name="tbGotoAddress" Width="100" Margin="3" LostFocus="tbGotoAddress_LostFocus" KeyDown="tbGotoAddress_KeyDown"/>
+					<Button Grid.Column="1" Height="20" Width="20" Margin="3,2,3,2" Click="GotoAddressCloseButton_Click">
+						<Path Data="M0,0 L8,8 M0,8 8,0" Stroke="Red" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					</Button>				
+				</StackPanel>
+			</Border>
+		</Popup>
+
+		<Grid Grid.Row="2" Background="{DynamicResource BackgroundHighlighted}" x:Name="gFooter">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="48"/>
 				<ColumnDefinition  />
 			</Grid.ColumnDefinitions>
 
-			<Button Grid.Column="0" Height="20" Width="20" Margin="13,2,15,2" Click="btnLoadList_Click">
-				<Path Stroke="White" Data="M0,0 L12,0 12,12 0,12 z M2,2 L10,2 M2,4 L8,4 M2,6 L9,6 M2,8 L8,8 M2,10 L10,10"/>
-			</Button>
+			<StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right">
+				<TextBlock Text="Tcycle:" />
+			</StackPanel>
 
 			<Border Grid.Column="1" BorderBrush="DarkGray" BorderThickness="0,1,0,0">
-				<Grid Margin="5,0,5,0" >
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="100"/>
-						<ColumnDefinition Width="100"/>
-						<ColumnDefinition />
-						<ColumnDefinition Width="50"/>
-					</Grid.ColumnDefinitions>
-					<TextBlock Grid.Column="0" Text="Selected Tcycles:" Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="Right" />
-					<TextBlock Grid.Column="1" Text="{Binding TstateSumString}" DataContext="{Binding ElementName=wDisassemblyList}" Foreground="{DynamicResource ASMTstateColor}" VerticalAlignment="Center" Margin="0,0,5,0"/>
-				</Grid>
+				<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+
+					<TextBlock Grid.Column="0" Text="{Binding TstateSumString}" DataContext="{Binding ElementName=wDisassemblyList}" Foreground="{DynamicResource ASMTstateColor}" MinWidth="50" VerticalAlignment="Center" Margin="3,0,3,0" />
+
+					<Button Grid.Column="1" Height="20" Width="20" Margin="3,2,3,2" ToolTip="Load assemler list file" Command="{Binding LoadAssemblerListCommand}">
+						<Path Stroke="White" Data="M0,0 L12,0 12,12 0,12 z M2,2 L10,2 M2,4 L8,4 M2,6 L9,6 M2,8 L8,8 M2,10 L10,10"/>
+					</Button>
+
+					<Button Grid.Column="1" Height="20" Width="20" Margin="3,2,3,2" ToolTip="GoTo address Ctrl-G" Command="{Binding GotoAddressCommand}">
+						<Path Data="M3,5 L0,2 0,12 10,12 7,9 M10,2 L8,2 10,4 Z M9,3 4,8 " Stroke="White" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					</Button>
+				</StackPanel>
 			</Border>
 		</Grid>
 	</Grid>
